--- a/FAQCollapse/style.css
+++ b/FAQCollapse/style.css
@@ -11,13 +11,16 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  overflow: hidden;
   margin: 0;
 }
 
+h1 {
+  text-align: center;
+}
+
 .question {
-  max-width: 600px;
+  background-color: transparent;
+  max-width: 800px;
   margin: 20px;
   padding: 20px 50px;
   border: 1px solid #000;
@@ -25,8 +28,55 @@ body {
   position: relative;
 }
 
-.btn {
+.question.show {
+  background-color: #fff;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+.question.show::before {
+  content: "\f075";
+  font-family: "Font Awesome 5 Free";
+  color: #2e53cc;
+  font-size: 7rem;
   position: absolute;
+  opacity: 0.2;
+  top: 20px;
+  left: 20px;
+  z-index: 0;
+}
+
+.question .text {
+  display: none;
+}
+
+.question.show .text {
+  display: block;
+}
+
+.btn {
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
   top: 20px;
   right: 20px;
+  --size: 30px;
+  height: var(--size);
+  width: var(--size);
+}
+
+.question .btn .fa-times {
+  display: none;
+}
+
+.question.show .btn .fa-times {
+  display: block;
+}
+
+.question.show .btn .fa-caret-down {
+  display: none;
 }
