--- a/FAQCollapse/style.css
+++ b/FAQCollapse/style.css
@@ -20,8 +20,8 @@ h1 {
 
 .question {
   background-color: transparent;
-  max-width: 800px;
-  margin: 20px;
+  width: 800px;
+  margin: 20px auto;
   padding: 20px 50px;
   border: 1px solid #000;
   border-radius: 15px;
@@ -69,7 +69,7 @@ h1 {
   width: var(--size);
 }
 
-.question .btn .fa-times {
+.btn .fa-times {
   display: none;
 }
 
@@ -79,4 +79,16 @@ h1 {
 
 .question.show .btn .fa-caret-down {
   display: none;
+}
+
+@media (max-width: 850px) {
+  .container {
+    width: 100%;
+  }
+
+  .question {
+    background-color: transparent;
+    width: 100%;
+    margin: 40px auto;
+  }
 }
