--- a/RandomChoicePicker/style.css
+++ b/RandomChoicePicker/style.css
@@ -15,3 +15,33 @@ body {
   overflow: hidden;
   margin: 0;
 }
+
+h3 {
+  color: #fff;
+  margin: 10px 0 20px;
+}
+
+.container {
+  width: 500px;
+}
+
+textarea {
+  border: none;
+  display: block;
+  width: 100%;
+  height: 100px;
+  font-family: inherit;
+  padding: 10px;
+  margin: 0 0 20px;
+  font-size: 16px;
+}
+
+#tags {
+  text-align: center;
+}
+
+.tag {
+  padding: 10px 20px;
+  height: 100px;
+  border-radius: 20px;
+}
