--- a/RandomChoicePicker/style.css
+++ b/RandomChoicePicker/style.css
@@ -35,6 +35,7 @@ textarea {
   padding: 10px;
   margin: 0 0 20px;
   font-size: 16px;
+  box-shadow: 1px 5px 6px rgba(0, 0, 0, 0.5);
 }
 
 #tags {
@@ -50,6 +51,7 @@ textarea {
   margin: 3px;
   border-radius: 20px;
   background-color: #30c975;
+  box-shadow: 1px 5px 6px rgba(0, 0, 0, 0.5);
 }
 
 .tag.highlight {
