--- a/AnimatedNavigation/style.css
+++ b/AnimatedNavigation/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap");
 
+:root {
+  --main: #af51fc;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -10,8 +14,8 @@ body {
     to bottom,
     #eafbff 0%,
     #eafbff 50%,
-    #af51fc 50%,
-    #af51fc 100%
+    var(--main) 50%,
+    var(--main) 100%
   );
   font-family: "Roboto", sans-serif;
   display: flex;
@@ -21,4 +25,74 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0;
+}
+
+/* navigation style */
+
+nav {
+  background-color: #fff;
+  padding: 20px;
+  width: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  transition: width 0.6s linear;
+}
+
+nav.active {
+  width: 350px;
+}
+
+nav ul {
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  width: 0;
+  transition: width 0.6s linear;
+}
+
+nav.active ul {
+  width: 100%;
+}
+
+nav ul li {
+  transform: rotateY(0deg);
+  opacity: 0;
+  transition: transform 0.4s linear, opacity 0.2s linear;
+}
+
+nav.active ul li {
+  opacity: 1;
+  transform: rotateY(360deg);
+}
+
+nav ul a {
+  position: relative;
+  color: #000;
+  text-decoration: none;
+  margin: 0 10px;
+}
+
+/* button nav */
+
+.icon {
+  background-color: #fff;
+  border: 0;
+  cursor: pointer;
+  padding: 0;
+  position: relative;
+  --size: 30px;
+  height: var(--size);
+  width: var(--size);
+}
+
+.icon:focus {
+  outline-color: transparent;
+}
+
+.icon .line {
+  background-color: var(--main);
 }
