--- a/AnimatedNavigation/style.css
+++ b/AnimatedNavigation/style.css
@@ -76,7 +76,7 @@ nav ul a {
   margin: 0 10px;
 }
 
-/* button nav */
+/* button nav icon */
 
 .icon {
   background-color: #fff;
@@ -95,4 +95,25 @@ nav ul a {
 
 .icon .line {
   background-color: var(--main);
+  height: 2px;
+  width: 20px;
+  position: absolute;
+  top: 10px;
+  left: 5px;
+  transition: transform 0.6s linear;
+}
+
+.icon .line2 {
+  top: auto;
+  bottom: 10px;
+}
+
+/* icon rotation */
+
+nav.active .icon .line1 {
+  transform: rotate(-765deg) translateY(5.5px);
+}
+
+nav.active .icon .line2 {
+  transform: rotate(765deg) translateY(-5.5px);
 }
